--- a/.github/workflows/python-release.yml
+++ b/.github/workflows/python-release.yml
@@ -33,7 +33,7 @@ jobs:
         cp members.json.example dist/gpq
         md "dist/gpq/scores"
         cd dist
-        jar -cfM ../gpq-${{ github.ref }}.zip gpq
+        jar -cfM ../gpq-${{ github.sha }}.zip gpq
         cd ..
     - name: Create Release
       id: create_release
@@ -54,6 +54,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: ./gpq-${{ github.ref }}.zip
-        asset_name: gpq-${{ github.ref }}.zip
+        asset_path: ./gpq-${{ github.sha }}.zip
+        asset_name: gpq-${{ github.sha }}.zip
         asset_content_type: application/zip
