--- a/.github/workflows/python-release.yml
+++ b/.github/workflows/python-release.yml
@@ -33,27 +33,15 @@ jobs:
         cp members.json.example dist/gpq
         md "dist/gpq/scores"
         cd dist
-        jar -cfM ../gpq-${{ github.sha }}.zip gpq
+        mv gpq gpq-${{ github.sha }}
+        jar -cfM ../gpq-nightly-${{ github.sha }}.zip gpq-${{ github.sha }}
         cd ..
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Release
+      uses: softprops/action-gh-release@v1
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
         body: |
-          Release ${{ github.ref }}
+          Release nightly-${{ github.sha }}
         draft: false
-        prerelease: false
-    - name: Upload Release Asset
-      id: upload-release-asset 
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: ./gpq-${{ github.sha }}.zip
-        asset_name: gpq-${{ github.sha }}.zip
-        asset_content_type: application/zip
+        tag_name: nightly-${{ github.sha }}
+        files: gpq-nightly-${{ github.sha }}.zip
+        fail_on_unmatched_files: true
