--- a/.github/workflows/python-release.yml
+++ b/.github/workflows/python-release.yml
@@ -19,10 +19,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    # - name: Set up Python 3.12
-    #   uses: actions/setup-python@v3
-    #   with:
-    #     python-version: "3.12"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -39,8 +35,9 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
+        name: Release gpq-image-ocr nightly-${{ github.sha }}
         body: |
-          Release nightly-${{ github.sha }}
+          Release gpq-image-ocr nightly-${{ github.sha }}
         draft: false
         tag_name: nightly-${{ github.sha }}
         files: gpq-nightly-${{ github.sha }}.zip
