--- a/.github/workflows/python-release.yml
+++ b/.github/workflows/python-release.yml
@@ -36,12 +36,12 @@ jobs:
         cd ..
     - name: Write Release Body
       run: |
-        git log --oneline --decorate="" "$(git rev-list --tags --max-count=1)..${{ github.sha }}" | Tee-Object RELEASE_BODY
+        .\release-body.ps1 ${{ github.sha }}
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
         name: Release gpq-image-ocr nightly-${{ github.sha }}
-        body_path: RELEASE_BODY
+        body_path: .\RELEASE_BODY
         draft: false
         tag_name: nightly-${{ github.sha }}
         files: gpq-nightly-${{ github.sha }}.zip
