--- a/.github/workflows/python-release.yml
+++ b/.github/workflows/python-release.yml
@@ -14,33 +14,40 @@ permissions:
 
 jobs:
   build:
-
+    defaults:
+      run:
+        shell: pwsh
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.12'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Validate py39 with black
-      run: black --target-version=py39 .\gpq.py
+    - name: Validate py312 with black
+      run: |
+        black --target-version=py312 ./gpq.py
+    - name: Write Release Body
+      run: pwsh -File ./Scripts/release-body.ps1
     - name: Build app & zip
       run: |
         pyinstaller gpq.py
         cp members.json.example dist/gpq
-        mkdir -F "dist/gpq/scores"
+        mkdir "dist/gpq/scores"
         cd dist
         mv gpq gpq-${{ github.sha }}
-        jar -cfM ../gpq-nightly-${{ github.sha }}.zip gpq-${{ github.sha }}
+        Compress-Archive -Path gpq-${{ github.sha }} -DestinationPath ../gpq-nightly-${{ github.sha }}.zip
         cd ..
-    - name: Write Release Body
-      run: .\release-body.ps1
     - name: Release
+      if: ${{ !env.ACT }}
       uses: softprops/action-gh-release@v1
       with:
         name: Release gpq-image-ocr nightly-${{ github.sha }}
-        body_path: .\RELEASE_BODY
+        body_path: ./RELEASE_BODY
         draft: false
         tag_name: nightly-${{ github.sha }}
         files: gpq-nightly-${{ github.sha }}.zip
