--- a/.github/workflows/python-release.yml
+++ b/.github/workflows/python-release.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         black --target-version=py312 ./gpq.py
     - name: Write Release Body
-      run: pwsh -File ./Scripts/release-body.ps1
+      run: iex "git log --oneline --decorate='' `"$(git rev-list --tags --max-count=1)..`" | Tee-Object RELEASE_BODY"
     - name: Build app & zip
       run: |
         pyinstaller gpq.py
