--- a/.github/workflows/python-release.yml
+++ b/.github/workflows/python-release.yml
@@ -5,7 +5,10 @@ name: Python application
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - master
+    tags:
+      - "v*.*.*"
 
 permissions:
   contents: write
@@ -18,35 +21,33 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v4
-      with:
-        python-version: '3.12'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Validate py312 with black
-      run: |
-        black --target-version=py312 ./gpq.py
-    - name: Write Release Body
-      run: iex "echo `"${{ github.event.head_commit.message }}`" | Tee-Object RELEASE_BODY"
-    - name: Build app & zip
-      run: |
-        pyinstaller gpq.py
-        cp members.json.example dist/gpq
-        mkdir "dist/gpq/scores"
-        cd dist
-        mv gpq gpq-${{ github.sha }}
-        Compress-Archive -Path gpq-${{ github.sha }} -DestinationPath ../gpq-nightly-${{ github.sha }}.zip
-        cd ..
-    - name: Release
-      if: ${{ !env.ACT }}
-      uses: softprops/action-gh-release@v1
-      with:
-        name: Release gpq-image-ocr nightly-${{ github.sha }}
-        body_path: ./RELEASE_BODY
-        draft: false
-        tag_name: nightly-${{ github.sha }}
-        files: gpq-nightly-${{ github.sha }}.zip
-        fail_on_unmatched_files: true
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Validate py312 with black
+        run: |
+          black --target-version=py312 ./gpq.py
+      - name: Write Release Body
+        run: iex "echo `"${{ github.event.head_commit.message }}`" | Tee-Object RELEASE_BODY"
+      - name: Build app & zip
+        run: |
+          pyinstaller gpq.py
+          cp members.json.example dist/gpq
+          mkdir "dist/gpq/scores"
+          cd dist
+          mv gpq gpq-${{ github.sha }}
+          Compress-Archive -Path gpq-${{ github.sha }} -DestinationPath ../gpq-${{ github.ref_name }}.zip
+          cd ..
+      - name: Release
+        if: !env.ACT && startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
+        with:
+          name: Release ${{ github.ref_name }}
+          files: gpq-${{ github.ref_name }}.zip
+          generate_release_notes: true
+          fail_on_unmatched_files: true
