--- a/.github/workflows/python-release.yml
+++ b/.github/workflows/python-release.yml
@@ -9,6 +9,7 @@ on:
       - master
     tags:
       - "v*.*.*"
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -25,10 +26,9 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.12"
+          cache: pip
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
       - name: Validate py312 with black
         run: |
           black --target-version=py312 ./gpq.py
