--- a/.github/workflows/python-release.yml
+++ b/.github/workflows/python-release.yml
@@ -42,7 +42,7 @@ jobs:
           Compress-Archive -Path gpq-${{ github.sha }} -DestinationPath ../gpq-${{ github.ref_name }}.zip
           cd ..
       - name: Release
-        if: ${{ env.ACT != '' && startsWith(github.ref, 'refs/tags/') }}
+        if: ${{ env.ACT == '' && startsWith(github.ref, 'refs/tags/') }}
         uses: softprops/action-gh-release@v2
         with:
           name: Release ${{ github.ref_name }}
